<?xml version="1.0"?>
<package format="2">
  <name>amigo2</name>
  <version>0.0.1</version>
  <description>The amigo2 meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amigo</exec_depend>
  <exec_depend>chrony_client_pc</exec_depend>
  <exec_depend>megatools</exec_depend>
  <exec_depend>tue_middleware</exec_depend>
  <exec_depend>tue_robocup_at_home</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
