<?xml version="1.0"?>
<package format="2">
  <name>hero1</name>
  <version>0.0.1</version>
  <description>The hero1 meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hero1_common</exec_depend>
  <exec_depend>hero</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
