<?xml version="1.0"?>
<package format="2">
  <name>hero1_demo</name>
  <version>0.0.1</version>
  <description>The hero1_demo meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hero1_common</exec_depend>
  <exec_depend>hero_demo</exec_depend>
  <exec_depend>tmux</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
