<?xml version="1.0"?>
<package format="2">
  <name>hero_demo_laptop</name>
  <version>0.0.1</version>
  <description>The hero_demo_laptop meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>viz</exec_depend>
  <exec_depend>hero_dashboard</exec_depend>
  <exec_depend>hero_demo_user</exec_depend>
  <exec_depend>hero_bringup</exec_depend>
  <exec_depend>ed_rviz_plugins</exec_depend>
  <exec_depend>terminator</exec_depend>
  <exec_depend>chrome</exec_depend>
  <exec_depend>geany</exec_depend>
  <exec_depend>gedit</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
