<?xml version="1.0"?>
<package format="2">
  <name>hero_demo_user</name>
  <version>0.0.1</version>
  <description>The hero_demo_user meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_demo_user</exec_depend>
  <exec_depend>hero_bringup</exec_depend>
  <exec_depend>hero_description</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
