<?xml version="1.0"?>
<package format="2">
  <name>hero_dev_full</name>
  <version>0.0.1</version>
  <description>The hero_dev_full meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hero_dev</exec_depend>
  <exec_depend>tue_tools</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
