<?xml version="1.0"?>
<package format="2">
  <name>hero_user</name>
  <version>0.0.1</version>
  <description>The hero_user meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tue_common</exec_depend>
  <exec_depend>robot_user</exec_depend>
  <exec_depend>hero_demo_user</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
