<?xml version="1.0"?>
<package format="2">
  <name>libfftw3</name>
  <version>0.0.1</version>
  <description>The libfftw3 meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>libfftw3_3</exec_depend>
  <exec_depend>libfftw3_dev</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
