<?xml version="1.0"?>
<package format="2">
  <name>matthijs</name>
  <version>0.0.1</version>
  <description>The matthijs meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tue_dev</exec_depend>
  <exec_depend>ack</exec_depend>
  <exec_depend>chrome_dev</exec_depend>
  <exec_depend>qtcreator</exec_depend>
  <exec_depend>pycharm</exec_depend>
  <exec_depend>geany</exec_depend>
  <exec_depend>gedit</exec_depend>
  <exec_depend>swri_console</exec_depend>
  <exec_depend>tue_save_map</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
