<?xml version="1.0"?>
<package format="2">
  <name>nvidia_docker2</name>
  <version>0.0.1</version>
  <description>The nvidia_docker2 meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>docker</exec_depend>
  <exec_depend>nvidia_driver</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
