<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>0.0.1</version>
  <description>The robot meta package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <author email="rayman747@hotmail.com">Ramon Wijnands</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ccache</exec_depend>
  <exec_depend>gitsu</exec_depend>
  <exec_depend>git_hooks</exec_depend>
  <exec_depend>networking</exec_depend>
  <exec_depend>vim</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
